--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -68,10 +68,10 @@
                     </div>
 
                     <div *ngIf="select['type'] === 'multiSelect'" style="padding-left: 40px; margin-bottom: 1rem;"
-                        i18n>HINWEIS: Eine Auswahl über die Karte ist für die Vergleiche leider nicht möglich.</div>
+                        i18n aria-hidden="true">HINWEIS: Eine Auswahl über die Karte ist für die Vergleiche leider nicht möglich.</div>
 
                     <!-- Select DrawValues-->
-                    <ul *ngIf="select['type'] === 'single' || select['type'] === 'multiSelect'">
+                    <ul class="tab" *ngIf="select['type'] === 'single' || select['type'] === 'multiSelect'">
 
                         <ng-container *ngIf="select['type'] === 'multiSelect'">
                             <li *ngFor="let f of nipixRuntime.availableNipixCategories; let x = index">
@@ -80,10 +80,22 @@
                                     <span class="check custom-radio" [style.background-color]="getCustomColor(itm)"
                                           (click)="toggleNipixCategory(itm)"
                                           *ngIf="nipixRuntime.getDrawPreset(itm).show">
+
                                         <input type="radio" id="npx{{i}}_{{x}}" name="npx{{i}}"
-                                               class="custom-control-input"
-                                               [checked]="nipixRuntime.getDrawPreset(itm)['nipixCategory'] === f"
-                                               (click)="toggleNipixCategory(itm)">
+                                           class="custom-control-input"
+                                           [checked]="nipixRuntime.getDrawPreset(itm)['nipixCategory'] === f"
+                                           (click)="toggleNipixCategory(itm)"
+                                           attr.aria-label="{{nipixRuntime.translate(f)}}"
+                                           *ngIf="select['preset'].length === 1">
+
+                                        <input type="radio" id="npx{{i}}_{{x}}" name="npx{{i}}"
+                                           class="custom-control-input"
+                                           [checked]="nipixRuntime.getDrawPreset(itm)['nipixCategory'] === f"
+                                           (click)="toggleNipixCategory(itm)"
+                                           attr.aria-label="{{nipixRuntime.translate(f)}} (Vergleich {{i+1}})"
+                                           *ngIf="select['preset'].length > 1">
+
+
                                         <label class="custom-control-label" for="npx{{i}}_{{x}}"></label>
 
                                     </span>
@@ -108,10 +120,21 @@
                                 <ng-container *ngIf="nipixRuntime.getDrawPreset(itm).show">
                                     <span class="check custom-checkbox" [style.background-color]="getCustomColor(itm)"
                                           style="padding-bottom: 0.5rem; padding-top: 0.5rem;">
+
                                         <input id="{{i}}vall"
-                                               [checked]="nipixRuntime.getDrawPreset(itm).values.length > 0"
-                                               type="checkbox" class="custom-control-input"
-                                               (click)="toggleAllSelect(itm)">
+                                            [checked]="nipixRuntime.getDrawPreset(itm).values.length > 0"
+                                            type="checkbox" class="custom-control-input"
+                                            (click)="toggleAllSelect(itm)"
+                                            attr.aria-label="Alles/Nichts auswählen"
+                                            *ngIf="select['preset'].length === 1">
+
+                                        <input id="{{i}}vall"
+                                            [checked]="nipixRuntime.getDrawPreset(itm).values.length > 0"
+                                            type="checkbox" class="custom-control-input"
+                                            (click)="toggleAllSelect(itm)"
+                                            attr.aria-label="Alles/Nichts auswählen (Vergleich {{i+1}})"
+                                            *ngIf="select['preset'].length > 1">
+
                                         <label for="{{i}}vall" style="margin-bottom: 0;" class="custom-control-label">
                                         </label>
                                     </span>
@@ -135,19 +158,29 @@
 
                                 <span class="check custom-checkbox" [style.background-color]="getCustomColor(itm)"
                                       *ngIf="nipixRuntime.getDrawPreset(itm).show">
+
                                     <input id="{{i}}v1{{subitem}}"
-                                           [checked]="nipixRuntime.getDrawPreset(itm).values.includes(subitem)"
-                                           type="checkbox" class="custom-control-input"
-                                           (click)="toggleMapSelect(itm, subitem, select['type'])">
+                                        [checked]="nipixRuntime.getDrawPreset(itm).values.includes(subitem)"
+                                        type="checkbox" class="custom-control-input"
+                                        (click)="toggleMapSelect(itm, subitem, select['type'])"
+                                        attr.aria-label="{{ nipixRuntime.formatter.getSeriesLabel(subitem) }}"
+                                        *ngIf="select['preset'].length === 1">
+
+                                    <input id="{{i}}v1{{subitem}}"
+                                        [checked]="nipixRuntime.getDrawPreset(itm).values.includes(subitem)"
+                                        type="checkbox" class="custom-control-input"
+                                        (click)="toggleMapSelect(itm, subitem, select['type'])"
+                                        attr.aria-label="{{ nipixRuntime.formatter.getSeriesLabel(subitem) }} (Vergleich {{i+1}})"
+                                        *ngIf="select['preset'].length > 1">
+
                                     <label for="{{i}}v1{{subitem}}" style="margin-bottom: 0;"
-                                           class="custom-control-label"></label>
+                                        class="custom-control-label"></label>
                                 </span>
                             </ng-container>
-                            <span class="dot">
+                            <span class="dot" *ngIf="select['type'] === 'single'">
                                 <span
                                   style="display: inline-block; border-radius: 10px; width: 10px; height: 10px;"
-                                  [style.background-color]="nipixRuntime.formatter.getSeriesColor(subitem)"
-                                  *ngIf="select['type'] === 'single'"></span>
+                                  [style.background-color]="nipixRuntime.formatter.getSeriesColor(subitem)"></span>
                             </span>
                             <span class="dotlabel">
                                 {{ nipixRuntime.formatter.getSeriesLabel(subitem) }}
@@ -161,7 +194,8 @@
                             <span class="check custom-checkbox">
                                 <input id="{{itm}}" type="checkbox" class="custom-control-input"
                                        [checked]="nipixRuntime.getDrawPreset(itm).show"
-                                       (change)="onToggleDrawRoot(itm)">
+                                       (change)="onToggleDrawRoot(itm)"
+                                        attr.aria-label="{{nipixRuntime.translate(itm)}}">
                                 <label for="{{itm}}" class="custom-control-label"></label>
                             </span>
                             <span (click)="onClickDrawRoot(itm)" class="dot">
