--- a/power/src/app/immobilien/immobilien/immobilien.component.scss
+++ b/power/src/app/immobilien/immobilien/immobilien.component.scss
@@ -51,8 +51,8 @@ ul.tab {
     width: 1.5rem;
     display: table-cell;
     vertical-align: top;
-    padding-right: 0.5rem;
     padding-left: 2rem;
+    padding-top: 0.2rem
 }
 
 .dot {
@@ -63,6 +63,7 @@ ul.tab {
 
 .dotlabel {
     display: table-cell;
+    padding-bottom: 0.1rem;
 }
 
 .row * {
