--- a/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
+++ b/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
@@ -35,7 +35,7 @@ i18n>Hilfe zur Formatierung</button>
                 <td><label>*text*</label></td>
             </tr>
             <tr>
-                <td><b><label i18n>kursiv</label></b></td>
+                <td><b><label i18n>fett</label></b></td>
                 <td><label>**text**</label></td>
             </tr>
             <tr>
