--- a/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
+++ b/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
@@ -93,6 +93,14 @@ i18n>Hilfe zur Formatierung</button>
                 <td><label>[Link](https://en.wikipedia.org/wiki/Markdown)</label></td>
             </tr>
             <tr>
+                <td><label i18n>Bild einbinden
+                </label>
+                <img src="/assets/logos/logo.png" alt="Logo" title="Logo LGLN" height="25px"/>
+
+            </td>
+                <td><label>![Logo](/assets/logos/logo.png "Logo LGLN")</label></td>
+            </tr>
+            <tr>
                 <td><label i18n>Formatierung verhindern, z.B. "*text"</label></td>
                 <td><label>\*text</label></td>
             </tr>
