--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -487,7 +487,7 @@
                 <div class="form-inline">
                     <div class="form-group m-0 mr-2">
                         <select class="custom-select"
-                                (change)="taskPerPage = $event.target.value; updateTasks(false)">
+                                (change)="taskPerPage = $event.target.value; updateTasks()">
                             <option *ngFor=" let size of taskPageSizes ">
                                 {{ size }}
                             </option>
