--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -72,18 +72,17 @@
                     <div class="well well-lg card card-block card-header verlauf">
                         <div class="p-0"
                              *ngIf="features">
-                            <div *ngIf="(!adresse || adresse.properties.bundesland != 'Niedersachsen') && !features.features.length"
+                            <div *ngIf="(!adresse || adresse.properties.bundesland != 'Niedersachsen' || adresse.properties.bundesland != 'Bremen') && !features.features.length"
                                  class="text-center col-12">
                                 <p class="m-3 mx-center lead"
                                    i18n>Keine gültige Adresse!</p>
                                 <p class="m-3 mx-center lead"
                                    i18n>Hinweis:</p>
                                 <p class="m-3 mx-center"
-                                   i18n>Bitte wählen Sie eine gültige Adresse innerhalb
-                                    von Niedersachsen aus. Die Genauigkeit des Suchradius für die Adresse beträgt 50
-                                    Meter.</p>
+                                   i18n>Bitte wählen Sie eine gültige Adresse innerhalb von Niedersachsen oder Bremen aus.
+                                    Die Genauigkeit des Suchradius für die Adresse beträgt 50 Meter.</p>
                             </div>
-                            <div *ngIf="adresse && adresse.properties.bundesland == 'Niedersachsen' && !features.features.length"
+                            <div *ngIf="adresse && (adresse.properties.bundesland == 'Niedersachsen' || adresse.properties.bundesland == 'Bremen') && !features.features.length"
                                  class="text-center col-12">
                                 <p class="m-3 mx-center"
                                    i18n>Es liegen keine Bodenrichtwertdaten für diese Adresse vor.</p>
