--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -358,7 +358,7 @@
                 <tbody>
                     <tr *ngFor="let task of tasks; index as i">
                         <td *ngIf="form.access !== 'public'">
-                            <a [routerLink]="['/forms/fillout', task.pin]" *ngIf="task.status !== 'submitted'">
+                            <a [routerLink]="['/forms/fillout', task.pin]" *ngIf="task.status !== 'submitted' && task.pin !== undefined && task.pin !== ''">
                                 {{ task.pin }}
                                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg"
                                     fill="currentColor" xmlns="http://www.w3.org/2000/svg" focusable="false"
@@ -395,7 +395,26 @@
                             <button type="button"
                                     class="btn btn-primary btn-sm mr-2"
                                     i18n-title
-                                    title="Ergebnisse anzeigen"
+                                    title="Neue PIN generieren"
+                                    (click)="newPin(i)"
+                                    *ngIf="form.access !== 'public' && auth.IsAuthorized(['admin', 'manager', 'editor'], form.owner.id, form.groups)">
+                                <svg width="1em"
+                                     height="1em"
+                                     viewBox="0 0 16 16"
+                                     class="bi bi-arrow-clockwise"
+                                     fill="currentColor"
+                                     xmlns="http://www.w3.org/2000/svg"
+                                     focusable="false"
+                                     aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
+                                    <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
+                                </svg>
+                                <span class="d-none d-sm-inline ml-1" i18n>Neue PIN</span>
+                            </button>
+                            <button type="button"
+                                    class="btn btn-primary btn-sm mr-2"
+                                    i18n-title
+                                    title="Ergebnis anzeigen"
                                     (click)="openTask(i)"
                                     *ngIf="task.status === 'submitted'">
                                 <svg width="1em"
@@ -409,10 +428,29 @@
                                     <path
                                         d="M4.5 1A1.5 1.5 0 0 0 3 2.5V3h4v-.5A1.5 1.5 0 0 0 5.5 1h-1zM7 4v1h2V4h4v.882a.5.5 0 0 0 .276.447l.895.447A1.5 1.5 0 0 1 15 7.118V13H9v-1.5a.5.5 0 0 1 .146-.354l.854-.853V9.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v.793l.854.853A.5.5 0 0 1 7 11.5V13H1V7.118a1.5 1.5 0 0 1 .83-1.342l.894-.447A.5.5 0 0 0 3 4.882V4h4zM1 14v.5A1.5 1.5 0 0 0 2.5 16h3A1.5 1.5 0 0 0 7 14.5V14H1zm8 0v.5a1.5 1.5 0 0 0 1.5 1.5h3a1.5 1.5 0 0 0 1.5-1.5V14H9zm4-11H9v-.5A1.5 1.5 0 0 1 10.5 1h1A1.5 1.5 0 0 1 13 2.5V3z" />
                                 </svg>
-                                <span class="d-none d-sm-inline ml-1" i18n>Ergebnisse</span>
+                                <span class="d-none d-sm-inline ml-1" i18n>Ergebnis</span>
                             </button>
                             <button type="button"
-                                    class="btn btn-danger btn-sm"
+                                    class="btn btn-primary btn-sm mr-2"
+                                    i18n-title
+                                    title="Antwort abschließen"
+                                    (click)="completeTask(i)"
+                                    *ngIf="task.status !== 'completed' && auth.IsAuthorized(['admin', 'manager', 'editor'], form.owner.id, form.groups)">
+                                <svg width="1em"
+                                     height="1em"
+                                     viewBox="0 0 16 16"
+                                     class="bi bi-arrow-clockwise"
+                                     fill="currentColor"
+                                     xmlns="http://www.w3.org/2000/svg"
+                                     focusable="false"
+                                     aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L8 9.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                                    <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1 0 13.5 8a.5.5 0 0 1 1 0 6.5 6.5 0 1 1-3.25-5.63.5.5 0 1 1-.5.865A5.472 5.472 0 0 0 8 2.5z"/>
+                                </svg>
+                                <span class="d-none d-sm-inline ml-1" i18n>Abschließen</span>
+                            </button>
+                            <button type="button"
+                                    class="btn btn-danger btn-sm mr-2"
                                     i18n-title
                                     title="Antwort löschen"
                                     (click)="deleteTask(i)"
