--- a/power/src/app/fragebogen/details/settings/settings.component.html
+++ b/power/src/app/fragebogen/details/settings/settings.component.html
@@ -1,10 +1,26 @@
 <power-modalmini #settingsmodal>
-    <!-- tags -->
-    <power-tagbox *ngIf="form && form.tags" [(tagList)]="form.tags" [dataList]="availableTags" i18n-tagboxLabel tagboxLabel="Tags"></power-tagbox>
+    <div class="form-group" *ngIf="auth.IsAuthorized(['admin', 'manager'], form.owner.id, form.groups)">
+        <label i18n>Besitzer</label>
+        <select class="form-control" [(ngModel)]="form.owner.id">
+            <option *ngFor="let user of availableUsers" [value]="user.id">
+                {{ user.name }}
+            </option>
+        </select>
+    </div>
+    <power-tagbox *ngIf="form && form.groups && auth.IsAuthorized(['admin', 'manager'], form.owner.id, form.groups)"
+                  [(tagList)]="form.groups"
+                  [dataList]="availableGroups"
+                  i18n-tagboxLabel tagboxLabel="Gruppen">
+    </power-tagbox>
+    <power-tagbox *ngIf="form && form.tags && auth.IsAuthorized(['admin', 'manager', 'editor'], form.owner.id, form.groups)"
+                  [(tagList)]="form.tags"
+                  [dataList]="availableTags"
+                  i18n-tagboxLabel tagboxLabel="Tags">
+    </power-tagbox>
 
     <!-- modal buttons -->
     <div class="modal-footer">
-        <button type="button" class="btn btn-success" i18n-title title="Formular teilen" (click)="this.out.emit({id: form.id, tags: form.tags}); modal.close();">
+        <button type="button" class="btn btn-success" i18n-title title="Formular teilen" (click)="this.out.emit({id: form.id, tags: form.tags, groups: form.groups, owner: form.owner.id}); modal.close();">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-share" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
                 <path fill-rule="evenodd"
